feature engineering with the cc data

--- a/home_credit_default_scriptv2.ipynb
+++ b/home_credit_default_scriptv2.ipynb
@@ -210,9 +210,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/MikeTodisco/anaconda2/lib/python2.7/site-packages/pandas/core/computation/check.py:17: UserWarning: The installed version of numexpr 2.4.4 is not supported in pandas and will be not be used\n",
+      "The minimum supported version is 2.4.6\n",
+      "\n",
+      "  ver=ver, min_ver=_MIN_NUMEXPR_VERSION), UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "train_num['children_ratio'] = train_num['CNT_CHILDREN'] / train_num['CNT_FAM_MEMBERS']\n",
     "train_num['credit_to_annuity_ratio'] = train_num['AMT_CREDIT'] / train_num['AMT_ANNUITY']\n",
@@ -249,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +452,98 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Loans per Customer\n",
+    "grp = cc_data.groupby(by = ['SK_ID_CURR'])['SK_ID_PREV'].nunique().reset_index().rename(index = str, columns = {'SK_ID_PREV': 'NO_LOANS'})\n",
+    "cc_data = cc_data.merge(grp, on = ['SK_ID_CURR'], how = 'left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Number of Installments paid by customer per loan\n",
+    "grp = cc_data.groupby(by = ['SK_ID_CURR', 'SK_ID_PREV'])['CNT_INSTALMENT_MATURE_CUM'].max().reset_index().rename(index = str, columns = {'CNT_INSTALMENT_MATURE_CUM': 'NO_INSTALMENTS'})\n",
+    "grp = grp.groupby(by = ['SK_ID_CURR'])['NO_INSTALMENTS'].sum().reset_index().rename(index = str, columns = {'NO_INSTALMENTS': 'TOTAL_INSTALMENTS'})\n",
+    "cc_data = cc_data.merge(grp, on = ['SK_ID_CURR'], how = 'left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Avg Number of Installments paid per Loan\n",
+    "cc_data['INSTALLMENTS_PER_LOAN'] = (cc_data['TOTAL_INSTALMENTS']/cc_data['NO_LOANS']).astype('uint32')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Avg % Loading of Credit Limit Per Customer\n",
+    "cc_data['AMT_CREDIT_LIMIT_ACTUAL1'] = cc_data['AMT_CREDIT_LIMIT_ACTUAL']\n",
+    "\n",
+    "def f(x1, x2):\n",
+    "    \n",
+    "    balance = x1.max() + 1\n",
+    "    limit = x2.max() + 1\n",
+    "    \n",
+    "    return (balance/limit)\n",
+    "\n",
+    "# Calculate the ratio of Amount Balance to Credit Limit - CREDIT LOAD OF CUSTOMER \n",
+    "# This is done for each Credit limit value per loan per Customer \n",
+    "\n",
+    "grp = cc_data.groupby(by = ['SK_ID_CURR', 'SK_ID_PREV', 'AMT_CREDIT_LIMIT_ACTUAL']).apply(lambda x: f(x.AMT_BALANCE, x.AMT_CREDIT_LIMIT_ACTUAL1)).reset_index().rename(index = str, columns = {0: 'CREDIT_LOAD1'})\n",
+    "del cc_data['AMT_CREDIT_LIMIT_ACTUAL1']\n",
+    "\n",
+    "# We now calculate the mean Credit load of All Loan transactions of Customer \n",
+    "grp1 = grp.groupby(by = ['SK_ID_CURR'])['CREDIT_LOAD1'].mean().reset_index().rename(index = str, columns = {'CREDIT_LOAD1': 'CREDIT_LOAD'})\n",
+    "\n",
+    "cc_data = cc_data.merge(grp1, on = ['SK_ID_CURR'], how = 'left')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index([u'SK_ID_PREV', u'SK_ID_CURR', u'MONTHS_BALANCE', u'AMT_BALANCE',\n",
+       "       u'AMT_CREDIT_LIMIT_ACTUAL', u'AMT_DRAWINGS_ATM_CURRENT',\n",
+       "       u'AMT_DRAWINGS_CURRENT', u'AMT_DRAWINGS_OTHER_CURRENT',\n",
+       "       u'AMT_DRAWINGS_POS_CURRENT', u'AMT_INST_MIN_REGULARITY',\n",
+       "       u'AMT_PAYMENT_CURRENT', u'AMT_PAYMENT_TOTAL_CURRENT',\n",
+       "       u'AMT_RECEIVABLE_PRINCIPAL', u'AMT_RECIVABLE', u'AMT_TOTAL_RECEIVABLE',\n",
+       "       u'CNT_DRAWINGS_ATM_CURRENT', u'CNT_DRAWINGS_CURRENT',\n",
+       "       u'CNT_DRAWINGS_OTHER_CURRENT', u'CNT_DRAWINGS_POS_CURRENT',\n",
+       "       u'CNT_INSTALMENT_MATURE_CUM', u'NAME_CONTRACT_STATUS', u'SK_DPD',\n",
+       "       u'SK_DPD_DEF', u'NO_LOANS'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cc_data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
