more cc data features

--- a/home_credit_default_scriptv2.ipynb
+++ b/home_credit_default_scriptv2.ipynb
@@ -513,37 +513,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index([u'SK_ID_PREV', u'SK_ID_CURR', u'MONTHS_BALANCE', u'AMT_BALANCE',\n",
-       "       u'AMT_CREDIT_LIMIT_ACTUAL', u'AMT_DRAWINGS_ATM_CURRENT',\n",
-       "       u'AMT_DRAWINGS_CURRENT', u'AMT_DRAWINGS_OTHER_CURRENT',\n",
-       "       u'AMT_DRAWINGS_POS_CURRENT', u'AMT_INST_MIN_REGULARITY',\n",
-       "       u'AMT_PAYMENT_CURRENT', u'AMT_PAYMENT_TOTAL_CURRENT',\n",
-       "       u'AMT_RECEIVABLE_PRINCIPAL', u'AMT_RECIVABLE', u'AMT_TOTAL_RECEIVABLE',\n",
-       "       u'CNT_DRAWINGS_ATM_CURRENT', u'CNT_DRAWINGS_CURRENT',\n",
-       "       u'CNT_DRAWINGS_OTHER_CURRENT', u'CNT_DRAWINGS_POS_CURRENT',\n",
-       "       u'CNT_INSTALMENT_MATURE_CUM', u'NAME_CONTRACT_STATUS', u'SK_DPD',\n",
-       "       u'SK_DPD_DEF', u'NO_LOANS'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cc_data.columns"
+    "# Function to calculate number of times Days Past Due occurred \n",
+    "\n",
+    "def f(DPD):\n",
+    "    \n",
+    "    # DPD is a series of values of SK_DPD for each of the groupby combination \n",
+    "    # We convert it to a list to get the number of SK_DPD values NOT EQUALS ZERO\n",
+    "    x = DPD.tolist()\n",
+    "    c = 0\n",
+    "    for i,j in enumerate(x):\n",
+    "        if j != 0:\n",
+    "            c += 1\n",
+    "    \n",
+    "    return c \n",
+    "\n",
+    "grp = cc_data.groupby(by = ['SK_ID_CURR', 'SK_ID_PREV']).apply(lambda x: f(x.SK_DPD)).reset_index().rename(index = str, columns = {0: 'NO_DPD'})\n",
+    "grp1 = grp.groupby(by = ['SK_ID_CURR'])['NO_DPD'].mean().reset_index().rename(index = str, columns = {'NO_DPD' : 'DPD_COUNT'})\n",
+    "\n",
+    "cc_data = cc_data.merge(grp1, on = ['SK_ID_CURR'], how = 'left')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Average of Days Past Due Per Customer\n",
+    "grp = cc_data.groupby(by= ['SK_ID_CURR'])['SK_DPD'].mean().reset_index().rename(index = str, columns = {'SK_DPD': 'AVG_DPD'})\n",
+    "cc_data = cc_data.merge(grp, on = ['SK_ID_CURR'], how = 'left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# % of Minimum Payments Missed\n",
+    "def f(min_pay, total_pay):\n",
+    "    \n",
+    "    M = min_pay.tolist()\n",
+    "    T = total_pay.tolist()\n",
+    "    P = len(M)\n",
+    "    c = 0 \n",
+    "    # Find the count of transactions when Payment made is less than Minimum Payment \n",
+    "    for i in range(len(M)):\n",
+    "        if T[i] < M[i]:\n",
+    "            c += 1  \n",
+    "    return (100*c)/P\n",
+    "\n",
+    "grp = cc_data.groupby(by = ['SK_ID_CURR']).apply(lambda x: f(x.AMT_INST_MIN_REGULARITY, x.AMT_PAYMENT_CURRENT)).reset_index().rename(index = str, columns = { 0 : 'PERCENTAGE_MISSED_PAYMENTS'})\n",
+    "cc_data = cc_data.merge(grp, on = ['SK_ID_CURR'], how = 'left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ratio of Cash vs Card Swipes\n",
+    "\n",
+    "grp = cc_data.groupby(by = ['SK_ID_CURR'])['AMT_DRAWINGS_ATM_CURRENT'].sum().reset_index().rename(index = str, columns = {'AMT_DRAWINGS_ATM_CURRENT' : 'DRAWINGS_ATM'})\n",
+    "cc_data = cc_data.merge(grp, on = ['SK_ID_CURR'], how = 'left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grp = cc_data.groupby(by = ['SK_ID_CURR'])['AMT_DRAWINGS_CURRENT'].sum().reset_index().rename(index = str, columns = {'AMT_DRAWINGS_CURRENT' : 'DRAWINGS_TOTAL'})\n",
+    "cc_data = cc_data.merge(grp, on = ['SK_ID_CURR'], how = 'left')\n",
+    "\n",
+    "cc_data['CASH_CARD_RATIO1'] = (cc_data['DRAWINGS_ATM']/cc_data['DRAWINGS_TOTAL'])*100\n",
+    "\n",
+    "grp = cc_data.groupby(by = ['SK_ID_CURR'])['CASH_CARD_RATIO1'].mean().reset_index().rename(index = str, columns ={ 'CASH_CARD_RATIO1' : 'CASH_CARD_RATIO'})\n",
+    "cc_data = cc_data.merge(grp, on = ['SK_ID_CURR'], how = 'left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Avg Drawing per Customer\n",
+    "\n",
+    "grp = cc_data.groupby(by = ['SK_ID_CURR'])['AMT_DRAWINGS_CURRENT'].sum().reset_index().rename(index = str, columns = {'AMT_DRAWINGS_CURRENT' : 'TOTAL_DRAWINGS'})\n",
+    "cc_data = cc_data.merge(grp, on = ['SK_ID_CURR'], how = 'left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grp = cc_data.groupby(by = ['SK_ID_CURR'])['CNT_DRAWINGS_CURRENT'].sum().reset_index().rename(index = str, columns = {'CNT_DRAWINGS_CURRENT' : 'NO_DRAWINGS'})\n",
+    "cc_data = cc_data.merge(grp, on = ['SK_ID_CURR'], how = 'left')\n",
+    "\n",
+    "cc_data['DRAWINGS_RATIO1'] = (cc_data['TOTAL_DRAWINGS']/cc_data['NO_DRAWINGS'])*100\n",
+    "\n",
+    "grp = cc_data.groupby(by = ['SK_ID_CURR'])['DRAWINGS_RATIO1'].mean().reset_index().rename(index = str, columns ={ 'DRAWINGS_RATIO1' : 'DRAWINGS_RATIO'})\n",
+    "cc_data = cc_data.merge(grp, on = ['SK_ID_CURR'], how = 'left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,16 +662,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "prev_app_data.columns = [x + '_PREV' for x in prev_app_data.columns]"
+    "prev_app_data.columns = [x + '_PREV' if x != 'SK_ID_PREV' else x for x in prev_app_data.columns]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,15 +808,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Prev App Data\n",
-    "prev_app_data_grouped = prev_app_data_merged.drop('SK_ID_PREV', axis = 1).groupby('SK_ID_CURR', as_index=False).sum()\n",
+    "prev_app_data_grouped = prev_app_data_merged.drop('SK_ID_PREV', axis = 1).groupby('SK_ID_CURR_PREV', as_index=False).sum()\n",
     "\n",
-    "app_train_merged = app_train_merged.merge(prev_app_data_grouped, how = 'left', left_on = 'SK_ID_CURR', right_on = 'SK_ID_CURR')\n",
-    "app_test_merged = app_test_merged.merge(prev_app_data_grouped, how = 'left', left_on = 'SK_ID_CURR', right_on = 'SK_ID_CURR')"
+    "app_train_merged = app_train_merged.merge(prev_app_data_grouped, how = 'left', left_on = 'SK_ID_CURR', right_on = 'SK_ID_CURR_PREV')\n",
+    "app_test_merged = app_test_merged.merge(prev_app_data_grouped, how = 'left', left_on = 'SK_ID_CURR', right_on = 'SK_ID_CURR_PREV')"
    ]
   },
   {
@@ -744,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,11 +839,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Input contains NaN, infinity or a value too large for dtype('float64').",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-72-ccb2345fe366>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mpoly_transformer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPolynomialFeatures\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdegree\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mpoly_transformer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mapp_train_merged\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mtrain_poly_features\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpoly_transformer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mapp_train_merged\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mtrain_subset_poly\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_poly_features\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpoly_transformer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_feature_names\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_features\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_merged_imputed\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/MikeTodisco/anaconda2/lib/python2.7/site-packages/sklearn/preprocessing/data.pyc\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y)\u001b[0m\n\u001b[1;32m   1307\u001b[0m         \u001b[0mself\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0minstance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1308\u001b[0m         \"\"\"\n\u001b[0;32m-> 1309\u001b[0;31m         \u001b[0mn_samples\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_features\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheck_array\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1310\u001b[0m         combinations = self._combinations(n_features, self.degree,\n\u001b[1;32m   1311\u001b[0m                                           \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minteraction_only\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/MikeTodisco/anaconda2/lib/python2.7/site-packages/sklearn/utils/validation.pyc\u001b[0m in \u001b[0;36mcheck_array\u001b[0;34m(array, accept_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, warn_on_dtype, estimator)\u001b[0m\n\u001b[1;32m    451\u001b[0m                              % (array.ndim, estimator_name))\n\u001b[1;32m    452\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mforce_all_finite\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 453\u001b[0;31m             \u001b[0m_assert_all_finite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    454\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    455\u001b[0m     \u001b[0mshape_repr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_shape_repr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/MikeTodisco/anaconda2/lib/python2.7/site-packages/sklearn/utils/validation.pyc\u001b[0m in \u001b[0;36m_assert_all_finite\u001b[0;34m(X)\u001b[0m\n\u001b[1;32m     42\u001b[0m             and not np.isfinite(X).all()):\n\u001b[1;32m     43\u001b[0m         raise ValueError(\"Input contains NaN, infinity\"\n\u001b[0;32m---> 44\u001b[0;31m                          \" or a value too large for %r.\" % X.dtype)\n\u001b[0m\u001b[1;32m     45\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     46\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Input contains NaN, infinity or a value too large for dtype('float64')."
+     ]
+    }
+   ],
    "source": [
-    "poly_transformer = PolynomialFeatures(degree = 2)\n",
+    "poly_transformer = PolynomialFeatures(degree = 1)\n",
     "poly_transformer.fit(app_train_merged)\n",
     "train_poly_features = poly_transformer.transform(app_train_merged)\n",
     "\n",
@@ -771,9 +870,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'train_poly_features' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-73-f47566a0ab49>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mscaler\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mStandardScaler\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mscaler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_poly_features\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mapp_train_scaled\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mscaler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_poly_features\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mapp_test_scaled\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mscaler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mapp_test_merged\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'SK_ID_CURR'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'train_poly_features' is not defined"
+     ]
+    }
+   ],
    "source": [
     "scaler = StandardScaler()\n",
     "scaler.fit(train_poly_features)\n",
@@ -783,17 +894,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from catboost import CatBoostClassifier\n",
-    "cat_model = CatBoostClassifier(iterations = 1000, random_state = 42, learning_rate = 0.25)"
+    "cat_model = CatBoostClassifier(iterations = 2000, random_state = 42, learning_rate = 0.2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -809,7 +920,7 @@
     "preds = pd.DataFrame(cat_model.predict_proba(app_test_scaled))\n",
     "submission_cat = pd.concat([test.SK_ID_CURR, preds], axis=1).drop(0, axis = 1)\n",
     "submission_cat.columns = ['SK_ID_CURR', 'Target']\n",
-    "submission_cat.to_csv('cat_sub1.csv', index=False)"
+    "submission_cat.to_csv('cat_sub2.csv', index=False)"
    ]
   },
   {
